# amse-hometasks

./: Makefile  ProjectHome.md  exceptions.h  expat_parser.cpp  expression.cpp  input.txt  largeint.cpp  largeint.h  main.cpp  sharedptr.cpp  sharedptr.h  singleton.h  stream_text_transformer.h  stream_transformer.cpp  stream_transformers_collection.h  utils.cpp  utils.h  word_counter.h  word_counter_sink.cpp  word_counter_sink.h  xml_transformer.cpp
branches/inheritance/: Makefile  expression.h  function.cpp  function.h  utils.cpp
branches/singleton/: Makefile  main.cpp  singleton.h
branches/word_counter/: CMakeLists.txt  consts.h  expat_parser.h  main.cpp  stream_text_transformer.cpp  stream_transformer.h  stream_transformers_collection.cpp  word_counter.cpp  xml_transformer.h
trunk/: Makefile  input.txt  largeint.cpp  largeint.h  main.cpp  output.txt  sharedptr.cpp  utils.cpp  utils.h
